[package]
description = "A payload builder for op-reth that builds optimistic payloads."
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "reth-optimism-payload-builder"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-basic-payload-builder.workspace = true
reth-payload-builder.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-revm.workspace = true
reth-transaction-pool.workspace = true

# ethereum
revm.workspace = true

# misc
thiserror.workspace = true
tracing.workspace = true
##------LUMIO-START-------
reth-interfaces.workspace = true
##------LUMIO-END-------

[features]
# This is a workaround for reth-cli crate to allow this as mandatory dependency without breaking the build even if unused.
# This makes managing features and testing workspace easier because clippy always builds all members if --workspace is provided
optimism = [
  "reth-primitives/optimism",
  "reth-revm/optimism",
  "reth-transaction-pool/optimism",
  "reth-provider/optimism",
  "reth-payload-builder/optimism",
]
