[package]
description = "A payload builder for op-reth that builds optimistic payloads."
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "reth-optimism-payload-builder"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-basic-payload-builder.workspace = true
reth-payload-builder.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-revm.workspace = true
reth-transaction-pool.workspace = true
reth-rpc-types.workspace = true
reth-rpc-types-compat.workspace = true
reth-node-api.workspace = true

# ethereum
revm.workspace = true
alloy-rlp.workspace = true

# misc
thiserror.workspace = true
tracing.workspace = true
sha2.workspace = true
##------LUMIO-START-------
reth-interfaces.workspace = true
##------LUMIO-END-------

[features]
optimism = [
    "reth-primitives/optimism",
    "reth-revm/optimism",
    "reth-provider/optimism",
    "reth-rpc-types-compat/optimism",
]